# ptscan

./: .editorconfig  .gitignore  Cargo.toml  README.md  TECH.md  TODO.md  build.rs  run.ps1
.cargo/: config
.github/workflows/: ci.yml  release.yml  weekly.yml
c/: Cargo.toml  build.rs  cbindgen.toml  lib.rs
c/include/: ptscan.h  ptscan.hpp
c/src/: error.rs  filter.rs  lib.rs  pointer.rs  process_handle.rs  scan.rs  scanner.rs  string.rs  system.rs  utils.rs  values.rs  watch.rs
crates/dynamicvec/: Cargo.toml  README.md
crates/dynamicvec/src/: lib.rs
crates/ptscan/: Cargo.toml  README.md
crates/ptscan-gui/: Cargo.toml  README.md  build.rs
crates/ptscan-gui/res/: main_window.glade  pointer_scan.glade  process_information.glade  show_scan_result_dialog.glade
crates/ptscan-gui/src/: lib.rs  main.rs  prelude.rs  scan.rs  settings.rs
crates/ptscan-gui/src/ui/: error_dialog.rs  filter_options.rs  main_menu.rs  main_window.rs  scan.rs  scratch.rs  show_scan_result_dialog.rs
crates/ptscan/src/: address.rs  lib.rs  module.rs  offset.rs  process_handle.rs  raw_serde.rs  scanner.rs  sign.rs  thread.rs  value.rs  values.rs
crates/ptscan/src/filter_expr/: ast.rs  lexer.rs
crates/ptscan/src/pointer/: lexer.rs  mod.rs
crates/ptscan/src/utils/: mod.rs
crates/ptscan/src/value_expr/: mod.rs  value_op.rs
installer/: ptscan.iss
lib/: Cargo.toml  build.rs
lib/src/: address.rs  address_range.rs  addresses.rs  alignment.rs  bitset.rs  encode.rs  encoding.rs  error.rs  filter.rs  lib.rs  module.rs  offset.rs  opts.rs  pointer.rs  pointer_scan.rs  predicate.rs  process.rs  process_handle.rs  progress_reporter.rs  scan.rs  scan_result.rs  scanner.rs  sign.rs  size.rs  special.rs  system.rs  system_info.rs  system_thread.rs  thread.rs  thread_buffers.rs  token.rs  ty.rs  type.rs  type_hint.rs  utils.rs  value.rs  values.rs  watch.rs
lib/src/filter/: ast.rs  lexer.rs  mod.rs  parser.lalrpop  special.rs
lib/src/filter_expr/: ast.rs  filter_op.rs  lexer.rs  mod.rs  parser.lalrpop  special.rs
lib/src/pointer/: lexer.rs  mod.rs  parser.lalrpop
lib/src/predicate/: ast.rs  lexer.rs  parser.lalrpop
lib/src/utils/: mod.rs  words.rs
lib/src/value_expr/: ast.rs  mod.rs
licenses/: COPYING_CCBYSA3
pts-app/: pts-app.pro
pts-c/: Cargo.toml  build.rs  cbindgen.toml
pts-c/include/: ptscan.h
pts-c/src/: address.rs  addresses.rs  error.rs  filter.rs  lib.rs  pointer.rs  process_handle.rs  scan.rs  string.rs  system.rs  ty.rs  type.rs  utils.rs  value.rs  values.rs  watch.rs
pts-cpp/: pts-cpp.pro
pts-cpp/pts/: Address.cpp  Address.h  Addresses.cpp  Addresses.h  Exception.cpp  Exception.h  Filter.cpp  Filter.h  Pointer.cpp  Pointer.h  ProcessHandle.cpp  ProcessHandle.h  Scan.cpp  Scan.h  String.cpp  String.h  System.cpp  System.h  ThreadPool.cpp  ThreadPool.h  Token.cpp  Token.h  Type.cpp  Type.h  Value.cpp  Value.h  Values.cpp  Values.h  Watch.cpp  Watch.h
pts-gui/: Cargo.toml  README.md  build.rs
pts-gui/res/: attach_dialog.glade  edit_scan_result_dialog.glade  filter_options.glade  main_window.glade  process_information.glade  scan_results.glade  show_scan_result_dialog.glade
pts-gui/src/: clipboard.rs  connect_dialog.rs  error_dialog.rs  error_handler.rs  filter_options.rs  lib.rs  macros.rs  main.rs  main_menu.rs  main_window.rs  memory.rs  paste_manager.rs  prelude.rs  scan.rs  scan_result_dialog.rs  scan_results.rs  scratch_results.rs  signal.rs  task.rs
pts-gui/src/ui/: edit_scan_result_dialog.rs  error_dialog.rs  filter_options.rs  main_menu.rs  main_window.rs  mod.rs  process_information.rs  scan.rs  scan_results.rs  scratch.rs  scratch_results.rs  show_scan_result_dialog.rs
pts-qt/: addresslist.cpp  addresslist.h  editaddress.cpp  editaddress.h  editaddress.ui  editfilter.cpp  editfilter.h  editfilter.ui  filterlist.cpp  filterlist.h  filterlist.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  openprocess.cpp  openprocess.h  pts-qt.pro  scanresults.cpp  scanresults.h  scanresults.ui  typecombobox.cpp  typecombobox.h  ui_addresslist.h  ui_editaddress.h  ui_editfilter.h  ui_mainwindow.h  ui_openprocess.h  ui_scanresults.h
qt/: addfilter.cpp  addfilter.h  addfilter.ui  addresslist.cpp  addresslist.h  addresslist.ui  editaddress.cpp  editaddress.h  editaddress.ui  editfilter.cpp  editfilter.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  openprocess.cpp  openprocess.h  openprocess.ui  pts.cpp  pts.h  ptscan.pro  scanresults.cpp  scanresults.h  validator.cpp  validator.h
qt/pts/: Filter.cpp  Filter.h  Pointer.cpp  Pointer.h  ProcessHandle.cpp  ProcessHandle.h  Scan.cpp  Scan.h  String.cpp  String.h  ThreadPool.cpp  ThreadPool.h  Token.cpp  Values.cpp  Values.h  Watch.cpp  Watch.h  scanner.cpp  scanner.h
res/win64/lib/: asprintf.lib  atk-1.0.lib  cairo-gobject.lib  cairo.lib  epoxy.lib  ffi.lib  fontconfig.lib  freetype.lib  fribidi.lib  gailutil-3.0.lib  gdk-3.0.lib  gdk_pixbuf-2.0.lib  gettextpo.lib  gio-2.0.lib  glib-2.0.lib  gmodule-2.0.lib  gobject-2.0.lib  gthread-2.0.lib  gtk-3.lib  harfbuzz-gobject.lib  iconv.lib  intl.lib  jasper.lib  jpeg-static.lib  libpng16.lib  libpng16_static.lib  libxml2.lib  pango-1.0.lib  pangocairo-1.0.lib  pangoft2-1.0.lib  pangowin32-1.0.lib  pixman-1.lib  pkgconf.lib  tiff.lib  turbojpeg-static.lib  zlib1.lib
res/win64/lib/gdk-pixbuf-2.0/2.10.0/: loaders.cache
res/win64/lib/gdk-pixbuf-2.0/2.10.0/loaders/: pixbufloader-ani.lib  pixbufloader-gdip-bmp.lib  pixbufloader-gdip-emf.lib  pixbufloader-gdip-gif.lib  pixbufloader-gdip-ico.lib  pixbufloader-gdip-jpeg.lib  (+10 more)
res/win64/share/icons/Adwaita/: icon-theme.cache
res/win64/share/icons/hicolor/: icon-theme.cache
resources/: ptscan.rc
src/: address.rs  lib.rs  main.rc  main.rs  module.rs  opts.rs  process.rs  process_handle.rs  scan.rs  scanner.rs  system_info.rs  system_thread.rs  thread.rs  thread_buffers.rs  utils.rs
tools/: run.ps1
tools/builder/: Cargo.toml
tools/builder/src/: main.rs
tui/: Cargo.toml  build.rs.disabled  run.ps1
tui/resources/: ptscan_tui.rc
tui/src/: help.md  lib.rs  main.rs  scan.rs
wix/: ptscan.wxs
