[package]
name = "ptscan-c"
version = "0.1.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
license = "MIT/Apache-2.0"
categories = ["data-structures"]

description = """
C bindings to ptscan.
"""

documentation = "https://docs.rs/ptscan"
homepage = "https://github.com/udoprog/ptscan"
repository = "https://github.com/udoprog/ptscan"

readme = "README.md"

[lib]
crate-type = ["staticlib"]

[dependencies]
ptscan = {path = "../lib", version = "0.1.0"}
failure = "0.1.5"
rayon = "1.0.3"

[build-dependencies]
cbindgen = "0.7"