[package]
name = "ptscan"
version = "0.1.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
license = "MIT/Apache-2.0"
categories = ["data-structures"]

description = """
A pointer scanner for Windows written in Rust.
"""

documentation = "https://docs.rs/ptscan"
homepage = "https://github.com/udoprog/ptscan"
repository = "https://github.com/udoprog/ptscan"

readme = "README.md"

[dependencies]
anyhow = "1.0.18"
thiserror = "1.0.4"
memoffset = "0.2"
byteorder = "1.3"
clap = "2.32"
rayon = "1.0.3"
log = "0.4"
fixed-map = "0.6"
hashbrown = "0.1.8"
lalrpop-util = "0.16.3"
num = {version = "0.2.0", features = ["i128"]}
num-bigint = {version = "0.2.2", features = ["i128"]}
num-traits = "0.2.8"
crossbeam-channel = "0.3.8"
lru = "0.4.0"
parking_lot = "0.9.0"
smallvec = "0.6.11"
memchr = "2.2.1"
serde = {version = "1.0.102", features = ["rc", "derive"]}

[dependencies.winapi]
version = "0.3.8"
features = [
    "sysinfoapi",
    "wow64apiset",
    "psapi",
    "errhandlingapi",
    "winbase",
    "winnt",
    "memoryapi",
    "tlhelp32",
    "handleapi",
    "winerror",
]

[dependencies.ntapi]
version = "0.2"

[build-dependencies]
failure = "0.1"
lalrpop = "0.16.3"