[package]
name = "pts-gui"
version = "0.1.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.22"
cascade = "0.1.3"
lazy_static = "1.4.0"
threadpool = "1.7.1"
parking_lot = "0.9.0"
num_cpus = "1.11.1"
ptscan = { path = "../lib" }
rayon = "1.2.1"
chrono = "0.4.9"

[dependencies.gtk]
git = "https://github.com/gtk-rs/gtk"
features = ["v3_22"]

[dependencies.gio]
git = "https://github.com/gtk-rs/gio"
features = ["v2_44"]

[dependencies.glib]
git = "https://github.com/gtk-rs/glib"
features = ["v2_52"]

[dependencies.gdk]
git = "https://github.com/gtk-rs/gdk.git"
features = ["v3_24"]

[build-dependencies]
vcpkg = "0.2.7"
anyhow = "1.0.22"