[package]
name = "ptscan-tui"
version = "0.1.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
license = "MIT/Apache-2.0"
categories = ["data-structures"]

description = """
A terminal user interface to ptscan
"""

documentation = "https://docs.rs/ptscan"
homepage = "https://github.com/udoprog/ptscan"
repository = "https://github.com/udoprog/ptscan"

readme = "README.md"

[dependencies]
ptscan = {path = "../lib", version = "0.1.0"}
rayon = "1.2.0"
hashbrown = "0.1.8"
anyhow = "1.0.18"
smallvec = "0.6.11"
clap = "2.33.0"
serde_cbor = "0.10.2"
serde_yaml = "0.8.11"
serde = {version = "1.0.102", features = ["rc", "derive"]}
flate2 = "1.0.12"
crossterm = "0.13.0"
num_cpus = "1.11.0"

[build-dependencies]
failure = "0.1"