[package]
name = "dynamicvec"
version = "0.0.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
description = "A pointer scanner for Windows written in Rust."
documentation = "https://docs.rs/ptscan"
readme = "README.md"
homepage = "https://github.com/udoprog/ptscan"
repository = "https://github.com/udoprog/ptscan"
license = "MIT OR Apache-2.0"
keywords = ["storage", "vector"]
categories = ["data-structures"]
