[package]
name = "ptscan-gui"
version = "0.0.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
description = """
A pointer scanner for Windows written in Rust.
"""
documentation = "https://docs.rs/ptscan"
readme = "README.md"
homepage = "https://github.com/udoprog/ptscan"
repository = "https://github.com/udoprog/ptscan"
license = "MIT OR Apache-2.0"
keywords = ["gui"]
categories = ["data-structures"]

[dependencies]
ptscan = { path = "../ptscan" }

anyhow = "1.0.32"
cascade = "0.1.4"
lazy_static = "1.4.0"
threadpool = "1.8.1"
parking_lot = "0.11.0"
num_cpus = "1.13.0"
rayon = "1.3.1"
chrono = "0.4.15"
rust-embed = { version = "6.3.0", features = ["interpolate-folder-path"] }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
uuid = { version = "0.8.1", features = ["v4"] }

[dependencies.gtk]
version = "0.9.1"
features = ["v3_24_9"]

[dependencies.gio]
version = "0.9.0"
features = ["v2_64"]

[dependencies.glib]
version = "0.10.1"
features = ["v2_64"]

[dependencies.gdk]
version = "0.13.1"
features = ["v3_24"]

[dependencies.pango]
version = "0.9.1"
features = ["v1_44"]

[build-dependencies]
anyhow = "1.0.32"
