[package]
name = "ptscan"
version = "0.0.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
description = "A pointer scanner for Windows written in Rust."
documentation = "https://docs.rs/ptscan"
readme = "README.md"
homepage = "https://github.com/udoprog/ptscan"
repository = "https://github.com/udoprog/ptscan"
license = "MIT/Apache-2.0"
keywords = ["memory-scanning"]
categories = ["data-structures"]

[dependencies]
dynamicvec = { path = "../dynamicvec" }

anyhow = "1.0.32"
thiserror = "1.0.20"
memoffset = "0.5.5"
byteorder = "1.3.4"
clap = "2.33.3"
rayon = "1.3.1"
log = "0.4.11"
fixed-map = { version = "0.7.1", features = ["serde"] }
hashbrown = { version = "0.8.2", features = ["serde"] }
lalrpop-util = "0.19.0"
num = { version = "0.3.0" }
num-bigint = { version = "0.3.0", features = ["serde"] }
num-traits = "0.2.12"
bigdecimal = { version = "0.1.2", features = ["serde"] }
crossbeam-channel = "0.4.3"
lru = "0.6.0"
parking_lot = "0.9.0"
smallvec = "0.6.11"
memchr = "2.3.3"
serde = { version = "1.0.115", features = ["rc", "derive"] }
num_cpus = "1.13.0"
hex = "0.4.2"
regex = "1.3.9"
crossbeam-queue = "0.2.3"
encoding_rs = "0.8.23"
serde_cbor = "0.11.1"

[dependencies.winapi]
version = "0.3.9"
features = [
    "sysinfoapi",
    "wow64apiset",
    "psapi",
    "errhandlingapi",
    "winbase",
    "winnt",
    "memoryapi",
    "tlhelp32",
    "handleapi",
    "winerror",
]

[dependencies.ntapi]
version = "0.3.4"

[build-dependencies]
lalrpop = "0.19.0"
